--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                 <p>Jurisdictional enforceability memos, structure diagrams, and legal matrix.</p>
                 <div class="status-tag ready">Final Version</div>
             </a>
+
+            <a href="presentation.html" class="doc-card">
+                <div class="card-icon">📊</div>
+                <h3>Investor Presentation</h3>
+                <p>Visual deck covering business model, structure, and operational flow.</p>
+                <div class="status-tag ready">Final Version</div>
+            </a>
         </div>
         <button id="lockBtn" class="lock-btn">Lock Access</button>
     </div>
