--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="legal.html" class="doc-card">
                 <div class="card-icon">⚖️</div>
                 <h3>Legal Team Briefing</h3>
-                <p>Jurisdictional enforceability memos, structure diagrams, and legal matrix.</p>
+                <p>Jurisdictional Enforceability memos, structure diagrams, and legal matrix.</p>
                 <div class="status-tag ready">Final Version</div>
             </a>
 
